--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 body {
   background-image: url("bg.png");
-  background-size: cover;
+  background-size: 100% center;
   background-repeat: no-repeat;
 }
 
