--- a/code.css
+++ b/code.css
@@ -21,25 +21,65 @@ nav {
   padding: 67px 184px;
 }
 
-.navLinks { 
-    display: flex; 
-    align-items: center; 
-    gap: 100px; 
+.navLinks {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+}
+
+.navLinks li a {
+  color: #fff;
+  text-align: center;
+  font-family: "Poppins";
+  font-size: 18px;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+.navLinks li a:hover {
+  color: #1abc9c;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+.mainTitle { 
+    color: #fff; 
+    text-align: center; 
+    font-family: "Poppins"; 
+    font-size: 36px; 
+    font-weight: 500; 
   } 
-  
-  .navLinks li a { 
+ 
+  .mainDescription { 
+    color: #969696; 
+    text-align: center; 
+    font-family: "Poppins"; 
+    font-size: 18px; 
+    font-weight: 300; 
+  } 
+
+  .button { 
+    background: #2e4dec; 
+    border-radius: 30px; 
     color: #fff; 
     text-align: center; 
     font-family: "Poppins"; 
     font-size: 18px; 
-    font-weight: 500; 
+    font-weight: 600; 
+    padding: 11px 58px; 
+    width: 200px; 
+    height: 50px; 
     transition: 0.3s; 
   } 
- 
-  .navLinks li a:hover { 
-    color: #1abc9c; 
+   
+  .button:hover { 
+    background-color: #1abc9c; 
   } 
-
 
 /* body { |-| Início do bloco de declaração para o seletor <body>. Todas as regras dentro destas chaves serão aplicadas ao elemento <body> do documento.
     background-image: url("bg.png"); |-| Define uma imagem de fundo para o elemento <body> do documento.
